force-app/main/default/objects/EPPS_Integration_Object__mdt/EPPS_Integration_Object__mdt.object-meta.xml
<CustomObject>
    <label>EPPS Integration Object</label>
    <pluralLabel>EPPS Integration Objects</pluralLabel>
</CustomObject>