force-app/main/default/objects/EPPS_Integration_Object__mdt/fields/EPPS_Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Integration_Setting__c</fullName>
    <label>EPPS Integration Setting</label>
    <referenceTo>EPPS_Integration_Setting__mdt</referenceTo>
    <relationshipLabel>EPPS Integration Objects</relationshipLabel>
    <relationshipName>EPPS_Integration_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>